[package]
name = "tic-tac-toe"
version = "0.0.0"
edition = "2021"
rust-version = "1.63.0"
authors = ["Valentin Kovalenko <https://www.kovalenko.link>"]
description = "A multiplayer turn-based game."
license = "WTFPL <http://www.wtfpl.net>"
repository = "https://github.com/stIncMale/tic-tac-toe"
readme = "readme.md"
keywords = ["tui"]
categories = ["command-line-utilities", "games"]

[lib]
name = "tic_tac_toe_lib"
path = "src/lib.rs"

[[bin]]
name = "tic-tac-toe"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.62"
oorandom = "11.1.3"
clap = { version = "3.2.17", features = ["unicode", "wrap_help"] }
cursive = { version = "0.19.0", default-features = false, features = ["crossterm-backend"]}
crossterm = "0.25.0"
cursive_buffered_backend = "0.6.1"

[dev-dependencies]
pretty_assertions_sorted = "1.2.0"
test-case = "2.2.1"
ntest = "0.8.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
