[package]
name = "tic-tac-toe"
version = "0.0.0"
edition = "2021"
rust-version = "1.64.0"
authors = ["Valentin Kovalenko <https://www.kovalenko.link>"]
description = "A multiplayer turn-based game."
readme = "readme.md"
license = "WTFPL"
homepage = "https://github.com/stIncMale/tic-tac-toe"
repository = "https://github.com/stIncMale/tic-tac-toe"
keywords = ["tui"]
categories = ["command-line-utilities", "games"]

[lib]
name = "tic_tac_toe_lib"
path = "src/lib.rs"

[[bin]]
name = "tic-tac-toe"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
oorandom = "11.1"
clap = { version = "3.2", features = ["unicode", "wrap_help", "cargo", "deprecated"] }
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend"]}
crossterm = "0.25"
cursive_buffered_backend = "0.6"

[dev-dependencies]
pretty_assertions_sorted = "1.2"
test-case = "2.2"
ntest = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
# This is definitely OK for the interactive mode, and should be fine for the dedicated server mode.
panic = "abort"
